# todocom

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: dev.yml  release.yml  test.yml
tests/: test_todo.py  test_tokenize.py  test_utils.py
tests/files/: t.py
tests/files/1/2/: cli.py
tests/files/java/: FoodSearch.java  HealthTracker.java
todo/: __main__.py  cli.py  tokenize.py  utils.py
todocom/: __main__.py  cli.py  comments.py  tokenize.py  utils.py
