[tool.poetry]
name = "todocom"
version = "0.2.8"
description = "CLI to retrieve a list of all TODO comments in the code"
authors = ["avivfaraj <avivfaraj4@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/avivfaraj/todocom"
repository = "https://github.com/avivfaraj/todocom"
documentation = "https://github.com/avivfaraj/todocom"

keywords = ["todo", "todo-list", "todo-comments", "cli"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/avivfaraj/todocom/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"

[tool.poetry.scripts]
todo = 'todocom.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
